Update bachelor party details

--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guadalajara Bachelor Party | 2024</title>
+    <title>Mickey's Bachelor Party | Guadalajara 2026</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header class="hero">
       <nav class="nav">
-        <span class="logo">GDL Bachelor Weekend</span>
+        <span class="logo">Mickey's Bachelor Party</span>
         <div class="nav-links">
           <a href="#details">Details</a>
           <a href="#itinerary">Itinerary</a>
           <a href="#stay">Stay</a>
+          <a href="#guest-list">Guest list</a>
           <a href="#rsvp">RSVP</a>
         </div>
       </nav>
       <div class="hero-content">
-        <p class="eyebrow">August 15-18, 2024 • Guadalajara, Mexico</p>
-        <h1>Let’s celebrate in Guadalajara.</h1>
+        <p class="eyebrow">March 4-8, 2026 • Guadalajara, Mexico</p>
+        <h1>Mickey’s bachelor party in Guadalajara.</h1>
         <p class="subtitle">
-          A weekend packed with tequila tastings, street food, and late-night adventures. Bring your best energy and
-          your most comfortable shoes.
+          A long weekend for Mickey with tequila adventures, street food, and late-night stories. Bring your best
+          energy and your most comfortable shoes.
         </p>
         <div class="hero-actions">
           <a class="button" href="#rsvp">I’m in</a>
@@ -40,11 +41,11 @@
         <div class="grid">
           <article class="card">
             <h3>Meet up</h3>
-            <p>Thursday night welcome drinks in Colonia Americana. We’ll post the exact bar in the group chat.</p>
+            <p>Wednesday night welcome drinks in Colonia Americana. We’ll post the exact bar in the group chat.</p>
           </article>
           <article class="card">
             <h3>Must-do experiences</h3>
-            <p>Tequila day trip, mercado tour, rooftop dinner, and a mariachi night in Plaza de los Mariachis.</p>
+            <p>Lucha libre match, Jose Cuervo Express to Tequila, rooftop dinner, and a mariachi night.</p>
           </article>
           <article class="card">
             <h3>Energy level</h3>
@@ -60,30 +61,37 @@
         </div>
         <div class="timeline">
           <div class="timeline-item">
-            <span class="day">Thursday</span>
+            <span class="day">Wednesday 3/4</span>
             <div>
               <h3>Arrival + welcome toast</h3>
               <p>Check in, drop bags, and meet at 8 pm for mezcal cocktails and street tacos.</p>
             </div>
           </div>
           <div class="timeline-item">
-            <span class="day">Friday</span>
+            <span class="day">Thursday 3/5</span>
             <div>
-              <h3>Tequila trail</h3>
-              <p>Private shuttle to Tequila for distillery tours, tastings, and a sunset dinner.</p>
+              <h3>City day + rooftop dinner</h3>
+              <p>Mercado San Juan de Dios, a chill afternoon, and rooftop dinner reservations at night.</p>
             </div>
           </div>
           <div class="timeline-item">
-            <span class="day">Saturday</span>
+            <span class="day">Friday 3/6</span>
             <div>
-              <h3>City day + nightlife</h3>
-              <p>Mercado San Juan de Dios, rooftop lunch, optional nap, then club night.</p>
+              <h3>Lucha libre night</h3>
+              <p>Wrestling match with luchadores, then late-night tacos and drinks.</p>
             </div>
           </div>
           <div class="timeline-item">
-            <span class="day">Sunday</span>
+            <span class="day">Saturday 3/7</span>
             <div>
-              <h3>Recovery brunch</h3>
+              <h3>Jose Cuervo Express</h3>
+              <p>All aboard the tourist train to Tequila, Mexico for tastings and a guided visit.</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <span class="day">Sunday 3/8</span>
+            <div>
+              <h3>Recovery brunch + departures</h3>
               <p>Pool hang, brunch, and airport runs starting at 1 pm.</p>
             </div>
           </div>
@@ -108,6 +116,36 @@
             <p>
               We’re booking a 6-bedroom villa with a pool. If you want in, send your deposit by June 20.
             </p>
+          </article>
+        </div>
+      </section>
+
+      <section id="guest-list" class="section alt">
+        <div class="section-header">
+          <h2>Guest list</h2>
+          <p>Here’s who’s on deck for Guadalajara.</p>
+        </div>
+        <div class="grid two">
+          <article class="card">
+            <ul class="guest-list">
+              <li>Mickey Christensen</li>
+              <li>Seth Konner</li>
+              <li>Josh Konner</li>
+              <li>Josh Crabtree</li>
+              <li>Ryan Korling</li>
+              <li>Ray Hatrick</li>
+              <li>Daniel Massop</li>
+            </ul>
+          </article>
+          <article class="card">
+            <ul class="guest-list">
+              <li>Neil Patel</li>
+              <li>Andrew Smart</li>
+              <li>Eric Schoohs</li>
+              <li>Kyle Grieger</li>
+              <li>Garen Alexander</li>
+              <li>Isaac Chomitz</li>
+            </ul>
           </article>
         </div>
       </section>
