Refresh Guadalajara trip design

--- a/index.html
+++ b/index.html
@@ -14,17 +14,24 @@
           <a href="#details">Details</a>
           <a href="#itinerary">Itinerary</a>
           <a href="#stay">Stay</a>
+          <a href="#gallery">Gallery</a>
           <a href="#guest-list">Guest list</a>
           <a href="#rsvp">RSVP</a>
         </div>
       </nav>
       <div class="hero-content">
+        <span class="stamp">GDL 2026</span>
         <p class="eyebrow">March 4-8, 2026 • Guadalajara, Mexico</p>
         <h1>Mickey’s bachelor party in Guadalajara.</h1>
         <p class="subtitle">
           A long weekend for Mickey with tequila adventures, street food, and late-night stories. Bring your best
           energy and your most comfortable shoes.
         </p>
+        <div class="pill-row">
+          <span class="pill">Colonia Americana base</span>
+          <span class="pill">Adventure + nightlife</span>
+          <span class="pill">Street food first</span>
+        </div>
         <div class="hero-actions">
           <a class="button" href="#rsvp">I’m in</a>
           <a class="button ghost" href="#details">Trip details</a>
@@ -40,16 +47,40 @@
         </div>
         <div class="grid">
           <article class="card">
+            <div class="card-icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24" role="img">
+                <path
+                  d="M12 2c3.3 0 6 2.7 6 6 0 4.6-6 12-6 12S6 12.6 6 8c0-3.3 2.7-6 6-6zm0 8.5a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"
+                  fill="currentColor"
+                />
+              </svg>
+            </div>
             <h3>Meet up</h3>
             <p>Wednesday night welcome drinks in Colonia Americana. We’ll post the exact bar in the group chat.</p>
           </article>
           <article class="card">
+            <div class="card-icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24" role="img">
+                <path
+                  d="M4 12h7l-2.5 8 8.5-10h-7l2.5-8L4 12z"
+                  fill="currentColor"
+                />
+              </svg>
+            </div>
             <h3>Must-do experiences</h3>
             <p>Lucha libre match, Jose Cuervo Express to Tequila, rooftop dinner, and a mariachi night.</p>
           </article>
           <article class="card">
+            <div class="card-icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24" role="img">
+                <path
+                  d="M12 3c4.4 0 8 3.6 8 8 0 4.4-3.6 8-8 8S4 15.4 4 11h2a6 6 0 1 0 6-6V3z"
+                  fill="currentColor"
+                />
+              </svg>
+            </div>
             <h3>Energy level</h3>
-            <p>Think: late nights, late brunch, and midday chill time at the pool.</p>
+            <p>Think: late nights, late brunch, and midday resets on the rooftop terrace and fountain patio.</p>
           </article>
         </div>
       </section>
@@ -92,8 +123,32 @@
             <span class="day">Sunday 3/8</span>
             <div>
               <h3>Recovery brunch + departures</h3>
-              <p>Pool hang, brunch, and airport runs starting at 1 pm.</p>
+              <p>Complimentary breakfast, a slow morning, and airport runs starting at 1 pm.</p>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="gallery" class="section">
+        <div class="section-header">
+          <h2>Photo strip</h2>
+          <p>Placeholder moments we’re chasing all weekend long.</p>
+        </div>
+        <div class="photo-strip">
+          <div class="photo-card">
+            <span>Tequila day</span>
+          </div>
+          <div class="photo-card">
+            <span>Tacos</span>
+          </div>
+          <div class="photo-card">
+            <span>Rooftop</span>
+          </div>
+          <div class="photo-card">
+            <span>Lucha libre</span>
+          </div>
+          <div class="photo-card">
+            <span>Night market</span>
           </div>
         </div>
       </section>
@@ -105,16 +160,17 @@
         </div>
         <div class="grid two">
           <article class="card">
-            <h3>Hotel option</h3>
+            <h3>Group Airbnb</h3>
             <p>
-              Stay at <strong>Hotel Lafayette</strong> or <strong>Casa Habita</strong> for walkable nightlife. Expect
-              $120–$180/night.
+              We’re booking a 6-bedroom villa that fits everyone comfortably. If you want in, send your deposit by
+              June 20.
             </p>
           </article>
           <article class="card">
-            <h3>Group Airbnb</h3>
+            <h3>Address + amenities</h3>
             <p>
-              We’re booking a 6-bedroom villa with a pool. If you want in, send your deposit by June 20.
+              Calle Nicolas Romero 14, Guadalajara, Jalisco 44100, Mexico. Complimentary breakfast, a rooftop for
+              golden-hour hangs, and a small decorative pool (more fountain than swimming pool).
             </p>
           </article>
         </div>
